--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "BulletSystem"]
 	path = BulletSystem
-	url = ../BulletEngine/BulletSystem/
+	url = http://localhost:3000/STKzica/BulletSystem.git
