--- a/.drone.yml
+++ b/.drone.yml
@@ -13,4 +13,4 @@ node:
 steps:
 - name: gut
   commands:
-  - Godot_v3.1.1-stable_linux_headless.64 -s addons/gut/gut_cmdln.gd --no-window -d --path $PWD -gdir=res://unit_testing/Unit/ -gprefix=test -gexit
+  - Godot_v3.1.1-stable_linux_headless.64 -d -s --path . addons/gut/gut_cmdln.gd -gdir=res://unit_testing/Unit/ -gprefix=test -gexit
