--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,10 @@ node:
   runner: potato-core
 
 steps:
+- name: export
+  commands:
+  - Godot_v3.1.1-stable_linux_headless.64 --export-debug "Linux/X11" --path ProjetoIntegradoJogosDigitais/ jogo_exportado_linux
+
 - name: gut
   commands:
   - Godot_v3.1.1-stable_linux_headless.64 -d -s --path . addons/gut/gut_cmdln.gd -gdir=res://unit_testing/Unit/ -gprefix=test -gexit
