--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ node:
 steps:
 - name: export
   commands:
-  - Godot_v3.1.1-stable_linux_headless.64 --export-debug "Linux/X11" --path ProjetoIntegradoJogosDigitais/ jogo_exportado_linux
+  - Godot_v3.1.1-stable_linux_headless.64 --export-debug "pck" --path ProjetoIntegradoJogosDigitais/ jogo_exportado_linux
 
 - name: gut
   commands:
