Reimport is needed to run tests

--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,13 @@ steps:
   commands:
   - git submodule update --init --recursive -j 8
 
+- name: reimport
+   commands:
+   - mkdir builds
+   - mkdir builds/linux
+   - Godot_v3.1.1-stable_linux_headless.64 --export-debug "nil" --path . builds/linux/jogo_exportado_linux
+
+
 - name: gut
   commands:
   - Godot_v3.1.1-stable_linux_headless.64 -s --path . addons/gut/gut_cmdln.gd -gdir=res://unit_testing/Unit/ -gprefix=test -gexit
