--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "FadeSystem"]
 	path = FadeSystem
 	url = http://192.168.1.200:3000/STKzica/FadeSystem.git
+[submodule "ErrorHandler"]
+	path = ErrorHandler
+	url = http://192.168.1.200:3000/STKzica/ErrorHandler.git
